# tabula

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yaml  pyproject.toml  requirements-dev.txt
src/tabula/: __init__.py  cli.py
