[project]
name = "tabula"
version = "0.1.0"
description = ""
authors = [
    {name = "Stuart Ellis",email = "stuart@stuartellis.name"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "tabula", from = "src"}]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src", "tests"]
target-version = "py314"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]

# Disable rules for compatibility with ruff formatter:
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = [
  "COM812", "COM819",
  "D104", "D206", "D300",
  "E111", "E114", "E117",
  "ISC001", "ISC002",
  "Q000", "Q001", "Q002", "Q003",
  "W191"
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"./tests/test_*.py" = [
    # S101 forbids assert()
    "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
