[project]
name = "tabula"
version = "0.3.0"
description = ""
authors = [
    {name = "Stuart Ellis",email = "stuart@stuartellis.name"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[project.scripts]
tabula = "tabula.cli:main"

[tool.poetry]
packages = [{include = "tabula", from = "src"}]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.6,<0.15.0)",
    {include-group = "test"}
]
test = [
    "pytest (>=9.0.1,<10.0.0)"
]

[tool.ruff]
src = ["src", "tests"]
target-version = "py314"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]

# Disable D103 so that documentation is not mandatory.
# Disable T201 to allow print().
# Disable rules to be compatible with ruff formatter:
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = [
  "COM812", "COM819", "D103",
  "D104", "D206", "D300",
  "E111", "E114", "E117",
  "ISC001", "ISC002",
  "Q000", "Q001", "Q002", "Q003",
  "T201", "W191"
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"./tests/test_*.py" = [
    # S101 forbids assert()
    "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
allow_zero_version = true
major_on_zero = false
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
commit_author = "GitLab CI <gitlab-ci@example.com>"
tag_format = "v{version}"
no_git_verify = true

[tool.semantic_release.remote]
type = "gitlab"
ignore_token_for_push = true
insecure = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commitrs = true

[tool.semantic_release.changelog]
exclude_commit_patterns = ["chore\\(release\\):.*"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = true

[tool.semantic_release.publish]
upload_to_vcs_release = true
dist_glob_patterns = []
